update cv in 1 page pdf

--- a/nguyen_hoan_thien_resume.tex
+++ b/nguyen_hoan_thien_resume.tex
@@ -110,10 +110,6 @@
     Da Nang, Viet Nam
 \end{center}
 
-%-----------SUMMARY-----------
-\section{Summary}
-I'm a passionate and driven full-stack developer with a strong enthusiasm for programming and artificial intelligence. Currently, I am expanding my expertise in AI/ML, focusing on deep learning, natural language processing (NLP), and model deployment. I continuously strive to enhance my skills, stay updated with the latest technologies, and build innovative solutions that integrate AI into real-world applications.
-
 %-----------EDUCATION-----------
 \section{Education}
   \resumeSubHeadingListStart
@@ -129,11 +125,11 @@ I'm a passionate and driven full-stack developer with a strong enthusiasm for pr
       {Backend Developer}{August 2023 -- May 2024}
       {SafeHorizons Software Services Co., Ltd}{Da Nang, Viet Nam}
       \resumeItemListStart
-        \resumeItem{Developed and maintained backend services using Python with frameworks such as Django REST framework}
-        \resumeItem{Designed and optimized RESTful APIs, ensuring high performance, scalability, and security}
-        \resumeItem{Worked with relational and NoSQL databases (PostgreSQL, Redis) to optimize queries and improve data retrieval speed}
-        \resumeItem{Followed Agile methodologies (Scrum), actively participating in daily stand-ups, sprint planning, and retrospectives}
-        \resumeItem{Collaborated effectively with frontend developers and other team members, providing API documentation and technical support}
+        \resumeItem{Developed and maintained backend services using Django REST framework}
+        \resumeItem{Designed RESTful APIs, optimized performance, and improved security}
+        \resumeItem{Worked with PostgreSQL, Redis, and improved database query performance}
+        \resumeItem{Collaborated with frontend developers, ensuring seamless API integration}
+        \resumeItem{Followed Agile methodologies (Scrum)}
         \resumeItem{Used Git (GitHub/GitLab) for version control, ensuring clean code management and effective collaboration}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
@@ -171,14 +167,13 @@ I'm a passionate and driven full-stack developer with a strong enthusiasm for pr
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Programming Languages}{: C/C++, Java, JavaScript, Dart, Python} \\
-     \textbf{AI/ML}{: Deep Learning, NLP, Transformer Models (PhoBERT, BERT), PyTorch, Scikit-learn} \\
-     \textbf{Frameworks/Platforms}{: Flutter, Django, Flask, FastAPI, ExpressJS, ReactJS} \\
-     \textbf{Tools/Source Control}{: Github, Gitlab, Figma, Docker} \\
-     \textbf{Database Management}{: MS SQL Server, MySQL, PostgreSQL, Firebase, MongoDB} \\
-     \textbf{IDEs/Text Editors}{: Visual Studio Code, NeoVim, Android Studio, Intellij IDE} \\
-     \textbf{Operating Systems}{: Windows, Linux (Ubuntu, Fedora)} \\
-     \textbf{Languages}{: Vietnamese (Native), English (TOEIC 765)}
+      \textbf{Languages}: Python, C/C++, Java, JavaScript, Dart \\
+      \textbf{AI/ML}: Deep Learning, NLP, PyTorch, Scikit-learn \\
+      \textbf{Backend}: Django, FastAPI, Flask, ExpressJS \\
+      \textbf{Frontend/Mobile}: ReactJS, Flutter \\
+      \textbf{Database}: PostgreSQL, MySQL, Firebase, MongoDB \\
+      \textbf{DevOps/Tools}: Docker, Git, GitHub, GitLab, CI/CD \\
+      \textbf{Languages}{: Vietnamese (Native), English (TOEIC 765)}
     }}
  \end{itemize}
 
@@ -197,11 +192,11 @@ I'm a passionate and driven full-stack developer with a strong enthusiasm for pr
   \resumeSubHeadingListEnd
 
 %-----------INTERESTS-----------
-\section{Interests \& Activities}
-\resumeItemListStart
-    \resumeItem{Reading books, IT news and blogs to stay current with industry trends}
-    \resumeItem{Gaming and playing football in free time}
-    \resumeItem{Listening to music while coding}
-\resumeItemListEnd
+% \section{Interests \& Activities}
+% \resumeItemListStart
+%     \resumeItem{Reading books, IT news and blogs to stay current with industry trends}
+%     \resumeItem{Gaming and playing football in free time}
+%     \resumeItem{Listening to music while coding}
+% \resumeItemListEnd
 
 \end{document} 
