--- a/nguyen_hoan_thien_resume.tex
+++ b/nguyen_hoan_thien_resume.tex
@@ -105,7 +105,7 @@
 %----------HEADING----------
 \begin{center}
     \textbf{\Huge \scshape Nguyen Hoan Thien} \\ \vspace{1pt}
-    \small +84 356496977 $|$ \href{mailto:nguyenhoanthien1312@gmail.com}{\underline{nguyenhoanthien1312@gmail.com}} $|$ 
+    \small +84 356496977 $|$ \href{https://www.linkedin.com/in/thien-nguyen-51ab47352/}{\underline{linkedin.com/in/thiennguyen}} $|$ 
     \href{https://github.com/Thiennguyen21it}{\underline{github.com/Thiennguyen21it}} $|$
     Da Nang, Viet Nam
 \end{center}
