rewrite experience section and bold keywords

--- a/nguyen_hoan_thien_resume.tex
+++ b/nguyen_hoan_thien_resume.tex
@@ -103,11 +103,17 @@
 \begin{document}
 
 %----------HEADING----------
+% \begin{center}
+%     \textbf{\Huge \scshape Nguyen Hoan Thien} \\ \vspace{1pt}
+%     \small +84 356496977 $|$ \href{https://www.linkedin.com/in/thien-nguyen-51ab47352/}{\underline{linkedin.com/in/thiennguyen}} $|$ 
+%     \href{https://github.com/Thiennguyen21it}{\underline{github.com/Thiennguyen21it}} $|$
+%     Da Nang, Viet Nam
+% \end{center}
 \begin{center}
-    \textbf{\Huge \scshape Nguyen Hoan Thien} \\ \vspace{1pt}
-    \small +84 356496977 $|$ \href{https://www.linkedin.com/in/thien-nguyen-51ab47352/}{\underline{linkedin.com/in/thiennguyen}} $|$ 
-    \href{https://github.com/Thiennguyen21it}{\underline{github.com/Thiennguyen21it}} $|$
-    Da Nang, Viet Nam
+  \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
+    \textbf{\Large \scshape Nguyen Hoan Thien} & Email: nguyenhoanthien1312@gmail.com \\
+    \href{https://github.com/Thiennguyen21it}{\underline{https://github.com/Thiennguyen21it}} & Mobile: +84 356496977 \\ 
+  \end{tabular*}
 \end{center}
 
 %-----------EDUCATION-----------
@@ -122,15 +128,16 @@
 \section{Experience}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Backend Developer}{August 2023 -- May 2024}
       {SafeHorizons Software Services Co., Ltd}{Da Nang, Viet Nam}
+      {Software Engineer}{Aug. 2023 -- May 2024}
       \resumeItemListStart
-        \resumeItem{Developed and maintained backend services using Django REST framework}
-        \resumeItem{Designed RESTful APIs, optimized performance, and improved security}
-        \resumeItem{Worked with PostgreSQL, Redis, and improved database query performance}
-        \resumeItem{Collaborated with frontend developers, ensuring seamless API integration}
-        \resumeItem{Followed Agile methodologies (Scrum)}
-        \resumeItem{Used Git (GitHub/GitLab) for version control, ensuring clean code management and effective collaboration}
+        \resumeItem{Designed and developed a full-scale \textbf{agricultural marketplace} from scratch, directly connecting farms with consumers and investors, contributing to a successful platform launch and \textbf{rapid user adoption}.}
+        \resumeItem{Implemented an efficient \textbf{background task processing} system and \textbf{caching mechanism}, resulting in a \textbf{40\%} reduction in page load time and \textbf{real-time} product availability updates.}
+        \resumeItem{Identified and resolved over \textbf{50 critical bugs} in the platform's help and support system, significantly improving \textbf{stability} and \textbf{user satisfaction}.}
+        \resumeItem{Optimized \textbf{database queries} and \textbf{API endpoints}, achieving a \textbf{25\%} reduction in transaction processing time and enhancing system \textbf{reliability} under load.}
+        \resumeItem{Developed comprehensive \textbf{automated test coverage}, leading to a \textbf{40\%} decrease in production incidents and improved \textbf{code quality}.}
+        \resumeItem{Leveraged \textbf{Docker} and \textbf{CI/CD pipelines} for consistent and automated deployments across development and production environments, including \textbf{nitrogen printing systems} for agricultural documentation.}
+        \resumeItem{\textbf{Technologies:} Django REST Framework, PostgreSQL, Redis, Celery, JWT, Docker, Git, CI/CD}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -141,62 +148,59 @@
       {Emergix - Unified Emergency Operations \& Planning Platform}{November -- December 2024}
       {The 33rd Vietnam IT Student Olympiad - PROCON VIETNAM}{Third Prize - Open Source Software Category}
       \resumeItemListStart
-        \resumeItem{Participated in brainstorming and conceptualizing ideas for the competition}
-        \resumeItem{Analyzed, designed, and developed the Communities Module (one of the three core modules)}
-        \resumeItem{Developed the LLM Service using GPT API with RAG and FAISS as the Vector Database}
-        \resumeItem{Built the Notification Service using SMTP (email) and Twilio (SMS) for real-time alerts}
-        \resumeItem{Implemented containerization and deployment using Docker}
-        \resumeItem{Wrote comprehensive documentation for maintainability and knowledge sharing}
+        \resumeItem{Analyzed, designed, and developed the \textbf{Communities Module} (one of three core modules)}
+        \resumeItem{Developed the \textbf{LLM Service} using \textbf{GPT API} with \textbf{RAG} and \textbf{FAISS} as the Vector Database}
+        \resumeItem{Built the \textbf{Notification Service} using \textbf{SMTP} (email) and \textbf{Twilio} (SMS) for \textbf{real-time alerts}}
+        \resumeItem{Implemented \textbf{containerization} and deployment using \textbf{Docker}}
         \resumeItem{\textbf{Technologies:} Appsmith, Strapi, Dify, SMTP, Twilio, Python, JavaScript/TypeScript}
+        \resumeItem{\textbf{GitHub:} \href{https://github.com/vku-open-source}{\underline{github.com/vku-open-source}}}
       \resumeItemListEnd
       
     \resumeSubheading
-      {TBest\_Food - E-commerce Food Delivery Application}{January -- April 2023}
-      {Self-Initiated Project}{Solo Developer}
+      {GuardianNet – AI-powered Online Protection Tool}{April 2025}
+      {GDGOC Hackathon Vietnam 2025}{Top 5 in Central Region, Team Leader}
       \resumeItemListStart
-        \resumeItem{Designed and implemented the front-end using Flutter for cross-platform compatibility}
-        \resumeItem{Developed the backend with Laravel, implementing secure and efficient API communication}
-        \resumeItem{Integrated Firebase to enable real-time notifications for order status updates}
-        \resumeItem{Implemented core e-commerce features including shopping cart, order tracking, user authentication, and payment integration}
-        \resumeItem{Designed and developed an admin panel for managing orders, products, and user accounts}
-        \resumeItem{\textbf{Technologies:} Flutter, Laravel, Firebase, MySQL, Git \& GitHub}
+        \resumeItem{Built a \textbf{browser extension} (Chrome, Edge, Brave) integrating a \textbf{multi-task AI model} to automatically scan and blur images containing violent content while detecting human presence before display}
+        \resumeItem{Combined \textbf{text processing} to filter profanity and abusive language, allowing hiding or replacing with [***] characters}
+        \resumeItem{Provided Options interface for users to configure \textbf{sensitivity levels}, whitelist/blacklist, and a \textbf{transparent dashboard} for parents/teachers to view detailed reports}
+        \resumeItem{Designed \textbf{Responsible AI architecture} ensuring fairness, transparency, and user data privacy protection}
+        \resumeItem{Trained a multi-task model (violence detection + human detection) on \textbf{MobileNetV2}, achieving \textbf{98.5\% accuracy}}
+        \resumeItem{Developed the extension with \textbf{Plasmo} (Manifest V3, content script \& background script) for \textbf{real-time processing}}
+        \resumeItem{\textbf{Technologies:} Multi-task Learning, MobileNetV2, TensorFlow/Keras, Plasmo, JavaScript, Python}
+        \resumeItem{\textbf{GitHub:} \href{https://github.com/Thiennguyen21it/GDGOC-hackathon-2025-AIGenerated}{\underline{github.com/Thiennguyen21it/GDGOC-hackathon-2025-AIGenerated}}}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 
 %-----------TECHNICAL SKILLS-----------
-\section{Technical Skills}
- \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-      \textbf{Languages}: Python, C/C++, Java, JavaScript, Dart \\
-      \textbf{AI/ML}: Deep Learning, NLP, PyTorch, Scikit-learn \\
-      \textbf{Backend}: Django, FastAPI, Flask, ExpressJS \\
-      \textbf{Frontend/Mobile}: ReactJS, Flutter \\
-      \textbf{Database}: PostgreSQL, MySQL, Firebase, MongoDB \\
-      \textbf{DevOps/Tools}: Docker, Git, GitHub, GitLab, CI/CD \\
-      \textbf{Languages}{: Vietnamese (Native), English (TOEIC 765)}
-    }}
- \end{itemize}
+% \section{Technical Skills}
+%  \begin{itemize}[leftmargin=0.15in, label={}]
+%     \small{\item{
+%       \textbf{Languages}: Python, JavaScript/TypeScript, Dart \\
+%       \textbf{Backend}: Django, FastAPI, Flask, NodeJS \\
+%       \textbf{Frontend/Mobile}: ReactJS, Flutter \\
+%       \textbf{Database}: PostgreSQL, MySQL, Firebase, MongoDB \\
+%       \textbf{DevOps/Tools}: Docker, Git, GitHub, GitLab, CI/CD \\
+%       \textbf{Languages}{: Vietnamese (Native), English (TOEIC 765)}
+%     }}
+%  \end{itemize}
 
 %-----------AWARDS-----------
 \section{Honors \& Awards}
   \resumeSubHeadingListStart
     \resumeSubheading
+      {Google Developers Groups On Campus Hackathon Vietnam 2025}{May 2025}
+      {Top 5 in Central Region, Team Leader}{}
+    \resumeSubheading
       {Third Prize - Open Source Software Category}{December 2024}
       {The 33rd Vietnam IT Student Olympiad - PROCON VIETNAM}{}
     \resumeSubheading
-      {Consolation Prize - VKU Robocar Innovation Contest}{May 2023}
-      {}{}
+      {VKU Robocar Innovation Contest}{May 2023}
+      {Consolation Prize}{}
     \resumeSubheading
-      {Third Prize - English Talent Competition VKU}{October 2022}
-      {}{}
+      {English Talent Competition VKU}{October 2022}
+      {Third Prize}{}
   \resumeSubHeadingListEnd
 
-%-----------INTERESTS-----------
-% \section{Interests \& Activities}
-% \resumeItemListStart
-%     \resumeItem{Reading books, IT news and blogs to stay current with industry trends}
-%     \resumeItem{Gaming and playing football in free time}
-%     \resumeItem{Listening to music while coding}
-% \resumeItemListEnd
+
 
 \end{document} 
