--- a/nguyen_hoan_thien_resume.tex
+++ b/nguyen_hoan_thien_resume.tex
@@ -166,7 +166,7 @@
         \resumeItem{Designed \textbf{Responsible AI architecture} ensuring fairness, transparency, and user data privacy protection}
         \resumeItem{Trained a multi-task model (violence detection + human detection) on \textbf{MobileNetV2}, achieving \textbf{98.5\% accuracy}}
         \resumeItem{Developed the extension with \textbf{Plasmo} (Manifest V3, content script \& background script) for \textbf{real-time processing}}
-        \resumeItem{\textbf{Technologies:} Multi-task Learning, MobileNetV2, TensorFlow/Keras, Plasmo, JavaScript, Python}
+        \resumeItem{\textbf{Technologies:} Multi-task Learning, MobileNetV2, TensorFlow/Keras, Plasmo, JavaScript/TypeScript, Python}
         \resumeItem{\textbf{GitHub:} \href{https://github.com/Thiennguyen21it/GDGOC-hackathon-2025-AIGenerated}{\underline{github.com/Thiennguyen21it/GDGOC-hackathon-2025-AIGenerated}}}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
