--- a/nguyen_hoan_thien_resume.tex
+++ b/nguyen_hoan_thien_resume.tex
@@ -148,10 +148,12 @@
       {Emergix - Unified Emergency Operations \& Planning Platform}{November -- December 2024}
       {The 33rd Vietnam IT Student Olympiad - PROCON VIETNAM}{Third Prize - Open Source Software Category}
       \resumeItemListStart
+        \resumeItem{Participated in \textbf{brainstorming} and \textbf{conceptualizing} ideas for the competition}
         \resumeItem{Analyzed, designed, and developed the \textbf{Communities Module} (one of three core modules)}
         \resumeItem{Developed the \textbf{LLM Service} using \textbf{GPT API} with \textbf{RAG} and \textbf{FAISS} as the Vector Database}
         \resumeItem{Built the \textbf{Notification Service} using \textbf{SMTP} (email) and \textbf{Twilio} (SMS) for \textbf{real-time alerts}}
         \resumeItem{Implemented \textbf{containerization} and deployment using \textbf{Docker}}
+        \resumeItem{Wrote comprehensive \textbf{documentation} for maintainability and knowledge sharing}
         \resumeItem{\textbf{Technologies:} Appsmith, Strapi, Dify, SMTP, Twilio, Python, JavaScript/TypeScript}
         \resumeItem{\textbf{GitHub:} \href{https://github.com/vku-open-source}{\underline{github.com/vku-open-source}}}
       \resumeItemListEnd
